<resources>
    <string name="app_name">sogongsogong</string>

    <string name="privacy">개인정보처리방침</string>
    <string name="privacyInfo">개인 정보 제3자 제공에 동의합니다.</string>

    <string name="user">익명</string>
    <string name="date"> </string>
    <string name="title"> </string>
    <string name="body"> </string>
    <string name="count">0</string>
    <string name="board">게시판</string>
    <string name="boardWrite">댓글을 입력해 주세요</string>
    <string name="login">로그인</string>
    <string name="ID">ID</string>
    <string name="PW">PW</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="firstUser">아직 회원이 아니시라면</string>
    <string name="signUp">회원가입</string>
    <string name="correctionInfo">내 정보 수정</string>
    <string name="userName">이름</string>
    <string name="userPhoneNum">전화번호</string>
    <string name="userBirth">생년월일</string>
    <string name="userBusinessNum">사업자번호</string>
    <string name="userEmail">이메일</string>
    <string name="checkSame">중복확인</string>
    <string name="checkPW">비밀번호 확인</string>
    <string name="prove">인증</string>
    <string name="enterSearchWord">검색어를 입력해 주세요</string>
    <string name="thumbnail">썸네일</string>
    <string name="jobCategory">업종</string>
    <string name="jobItem">종목</string>
    <string name="inputContents">내용을 입력하세요.</string>
    <string name="addImage">사진 추가하기</string>
    <string name="addImageButton">사진추가버튼</string>
    
    <string name="main_mypage">마이페이지</string>
    <string name="myPage_my_fav_scrap">좋아요/스크랩 조회</string>
    <string name="myPage_my_fav">좋아요 한 게시글</string>
    <string name="myPage_my_scrap">스크랩 한 게시글</string>
    <string name="myPage_app_info">앱 정보</string>
    <string name="myPage_setting">설정</string>
    <string name="myPage_user_info_policy">개인정보처리방침</string>
    <string name="myPage_feedback">개발자에게 피드백 전송</string>

    <string name="homeButton">홈버튼</string>
    <string name="createPost">글작성</string>
    <string name="sogongsogong">소공소공</string>
    <string name="goodInfo">알아두면 좋을 정보</string>
    <string name="sogongsogongboard">소공소공 게시판</string>

    <string name="myPost">내가 쓴 글</string>
    <string name="commentedPost">댓글 단 글</string>
    <string name="likePost">좋아요 한 글</string>
    <string name="scrapedPost">스크랩 한 글</string>
    <string name="hotBoard">Hot 게시물</string>
    <string name="bestBoard">BEST 게시물</string>
    <string name="marketBoard">장터 게시판</string>
    <string name="sogongsogongBoard">소공소공 게시판</string>
    <string name="liveSogongsogongIs"># 실시간 소공소공은?</string>
    <string name="pleaseInputSearchKeyword">검색어를 입력해주세요.</string>

    <string name="businessNumManagement">사업자등록증 관리</string>
    <string name="newBusinessNumButton">새로 인증하기</string>
    <string name="reBusinessNumButton">다시 인증하기</string>

    <string name="boardList">게시판목록</string>
    <string name="register">등록</string>
    <string name="sogongsogongTalk">소공소공 말하기</string>
    <string name="canTwoMaxHashTag">최대 2개의 해시태그를 걸 수 있어요.</string>
    <string name="selectHashTag">해시태그를 선택해주세요.</string>
    <string name="roodCustomer">블랙컨슈머</string>
    <string name="like">좋아요</string>
    <string name="scrap">스크랩</string>


    <string name="notice">알림</string>
    <string name="thumbs_up">따봉</string>
    <string name="writeButton">글쓰기 버튼</string>
    <string name="profile">프로필 사진</string>
    <string name="hashTagBoard">해시태그 게시판</string>
    <string name="select_hash_tag">해시태그 선택하기</string>

    <string name="completeSignUp">가입완료</string>
    <string name="authorize">인증하기</string>
    <string name="authorizeLater">나중에 인증하기</string>
    <string name="representative">대표자명</string>

    <string name="reset">초기화하기</string>
    <string name="complete_select">선택완료</string>

    <string name="hotIcon">핫 아이콘</string>
    <string name="newComment">새로운 댓글이 달렸어요.</string>
  
    <string name="detail">더보기</string>
    <string name="hot">핫</string>
    <string name="comment">댓글</string>
    <string name="category">업태분류</string>
    <string name="etcCategory">기타분류</string>
    <string name="sector">업종</string>
    <string name="wholesale_and_retail_business">wholesale and retail business</string>
    <string name="typeOfBusiness">종목</string>
    <string name="e_commerce">전자상거래</string>
    <string name="inputRepresentative">대표자명을 입력해주세요</string>
    <string name="openingDate">개업일자</string>
    <string name="licenseNumber">사업자등록번호</string>
    <string name="enter_the_number_except">Enter the Number except \'-\'</string>
    <string name="pickDate">날짜선택</string>
    <string name="default_web_client_id"> </string>


</resources>