<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="joinViewModel"
            type="com.gdsc.sogongsogong.ui.join.JoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_auth_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="26dp"
            app:srcCompat="@drawable/img_sogongsogong_signup"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_auth_representative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="51dp"
            android:text="@string/representative"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/img_auth_logo"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_auth_representative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="77dp"
            android:inputType="text"
            android:textSize="14sp"
            android:hint="@string/inputRepresentative"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_representative"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_auth_openingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="39dp"
            android:text="@string/openingDate"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/et_auth_representative"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_auth_openingDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickDate"
            android:layout_marginTop="9dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:paddingStart="11dp"
            android:paddingTop="5dp"
            android:paddingBottom="6dp"
            android:paddingEnd="8dp"
            android:background="@drawable/edge_searchbar"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_openingDate"
            app:drawableEndCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/tv_auth_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licenseNumber"
            android:textColor="@color/black"
            android:layout_marginStart="26dp"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_openingDateButton"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_auth_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="77dp"
            android:inputType="text"
            android:hint="@string/enter_the_number_except"
            app:layout_constraintTop_toBottomOf="@id/tv_auth_license" />

        <TextView
            android:id="@+id/tv_auth_authButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="10.48dp"
            android:paddingTop="6dp"
            android:paddingBottom="6.45dp"
            android:gravity="center"
            android:text="@string/authorize"
            android:textColor="@color/white"
            android:background="@drawable/shape_auth_button_purple"
            android:onClick="@{() -> joinViewModel.emitAuthorizeClickEvent()}"
            app:layout_constraintBottom_toTopOf="@id/tv_auth_authorizeLater" />

        <TextView
            android:id="@+id/tv_auth_authorizeLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="51.48dp"
            android:paddingTop="6dp"
            android:paddingBottom="6.45dp"
            android:gravity="center"
            android:background="@drawable/shape_auth_button"
            android:textColor="@color/white"
            android:text="@string/authorizeLater"
            android:onClick="@{() -> joinViewModel.emitAuthorizeClickEvent()}"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>