<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="navViewModel"
            type="com.gdsc.sogongsogong.NavViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_writePost_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71.5dp"
            android:layout_marginStart="22.8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_writePost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="118dp"
            android:text="@string/sogongsogongTalk"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_writePost_register"
            android:layout_width="38.81dp"
            android:layout_height="23dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_btn"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingStart="2dp"
            android:paddingBottom="7dp"
            android:paddingEnd="2.81dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_writePost_jobCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canTwoMaxHashTag"
            android:layout_marginTop="31dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="160dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_writePost_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/spinner_writePost_jobCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/selectHashTag"
            android:layout_marginStart="21dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="21dp"
            android:textColor="@color/main_color"
            android:textSize="10dp"
            android:padding="5dp"
            android:background="@drawable/edge_notice"
            app:layout_constraintTop_toBottomOf="@id/tv_writePost_jobCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />

<!--        TODO:   chip group-->
        <TextView
            android:id="@+id/chip_writePost_hashTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roodCustomer"
            android:layout_marginStart="21dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_hash_tag"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_writePost_jobCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableEndCompat="@drawable/ic_close"
            app:drawableTint="@color/white" />

        <View
            android:id="@+id/divider_writePost"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@id/chip_writePost_hashTag"
            app:layout_constraintStart_toStartOf="@id/chip_writePost_hashTag"
            app:layout_constraintEnd_toEndOf="@id/spinner_writePost_jobCategory"/>

        <EditText
            android:id="@+id/et_writePost_contents"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/inputContents"
            android:gravity="top"
            android:textSize="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="null"
            app:layout_constraintTop_toBottomOf="@id/divider_writePost"
            app:layout_constraintBottom_toTopOf="@id/tv_writePost_addImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_writePost_addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addImage"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_writePost_jobCategory"
            app:layout_constraintBottom_toTopOf="@id/edge_writePost_addImageBox"/>

<!--        TODO: add edge & reset position-->

        <View
            android:id="@+id/edge_writePost_addImageBox"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/edge_notice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/tv_writePost_addImageButton"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:contentDescription="@string/addImageButton"
            android:onClick="@{() -> navViewModel.emitAddImageClickEvent()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edge_writePost_addImageBox"
            app:layout_constraintBottom_toBottomOf="@id/edge_writePost_addImageBox"
            android:src="@drawable/ic_camera" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>